--- a/README
+++ b/README
@@ -1,2 +1,8 @@
+Barely any features yet, but the interpreting part works! Awesome :)
+
+# Grammar
+
 print <expression> | <number>
-      <expression> : <expression> + <expression>
+
+      <expression> : <expression> + <number>
+                   | <number>
