--- a/README
+++ b/README
@@ -6,3 +6,14 @@ print <expression>
 
       <expression> : <expression> + <number>
                    | <number>
+
+
+# Checklist - Adding a new node
+
+1) nodes.h:   Type definition
+2) nodes.h:   Node definition
+3) nodes.h:   Function declaration
+4) nodes.c:   Function definition
+5) main.c:    Eval definition
+6) lex.l:     Token definition 
+7) grammar.y: Grammar definition
