--- a/README
+++ b/README
@@ -11,10 +11,10 @@ print <expression>
 
 # Checklist - Adding a new node
 
-1) nodes.h:   Type definition
-2) nodes.h:   Node definition
+1) nodes.h:   Type declaration
+2) nodes.h:   Node declaration
 3) nodes.h:   Function declaration
 4) nodes.c:   Function definition
-5) main.c:    Eval definition
-6) lex.l:     Token definition 
+5) main.c:    Eval case definition
+6) lex.l:     Token definition
 7) grammar.y: Grammar definition
